[package]
name = "twitch_helix"
version = "0.3.2"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[features]
default = ["tokio"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
itertools = "0.9"
pin-utils = "0.1"
serde_json = "1"

[dependencies.async-std]
version = "1"
optional = true

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]

[dependencies.reqwest]
version = "0.10"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "0.3"
features = ["sync", "time"]
optional = true

[dependencies.tokio02]
package = "tokio"
version = "0.2"
features = ["sync", "time"]
optional = true

[dependencies.url]
version = "2"
features = ["serde"]
