[package]
name = "twitch_helix"
version = "0.4.1"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
futures = "0.3"
itertools = "0.10"
serde_json = "1"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["sync", "time"]

[dependencies.url]
version = "2"
features = ["serde"]
