[package]
name = "twitch_helix"
version = "0.5.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
itertools = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "macos-system-configuration", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { package = "serde_json_path_to_error", version = "0.1" }
thiserror = "1"
tokio = { version = "1", features = ["sync", "time"] }
url = { version = "2", features = ["serde"] }
